# poshanka

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deploy.yml  doc.yml  fmt-clippy.yml  test.yml
docs/: PLAN.md
examples/: config.toml  theme.toml
examples/apps/some_app/: config.toml  theme.toml
examples/apps/some_app/urgency/critical/: config.toml
examples/apps/some_app/urgency/low/: config.toml
examples/feed-fixtures/: list.jsonl  subscribe-reload.jsonl  subscribe-update.jsonl
examples/scripts/: notred-subscribe.sh
examples/urgency/critical/: config.toml  theme.toml
examples/urgency/low/: theme.toml
libposhanka/: Cargo.toml
libposhanka/src/: error.rs  lib.rs
libposhanka/src/color/: mod.rs  tests.rs
libposhanka/src/feed/: command.rs  exec.rs  list.rs  mod.rs  provider.rs  state.rs  tests.rs
libposhanka/src/feed/command/: tests.rs
libposhanka/src/feed/list/: tests.rs
libposhanka/src/feed/state/: tests.rs
libposhanka/src/model/: mod.rs
libposhanka/src/render/: font.rs  measure.rs  mod.rs  paint.rs  shape.rs  template.rs  tests.rs
libposhanka/src/subscriber/: mod.rs
libposhanka/src/wayland/: anchor.rs  mod.rs  stack.rs  tests.rs
libposhanka/tests/: live_provider.rs
poshanka/: Cargo.toml
poshanka/src/: error.rs  main.rs
poshanka/src/app/: mod.rs  style.rs  tests.rs
poshanka/src/cli/: mod.rs  tests.rs
poshanka/src/config/: mod.rs  tests.rs
poshanka/src/logger/: mod.rs
poshanka/src/settings/: mod.rs  tests.rs
poshanka/src/theme/: mod.rs  tests.rs
poshankactl/: Cargo.toml
poshankactl/src/: main.rs
