[workspace]
members = ["libposhanka", "poshanka", "poshankactl"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/Gigas002/poshanka"
description = "Minimalistic wayland-native notification daemon, inspired by dunst"
keywords = ["wayland", "notifications", "pango", "cairo", "dunst"]
repository = "https://github.com/Gigas002/poshanka"
version = "0.1.0"
