[workspace]
members = ["libposhanka", "poshanka"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/Gigas002/poshanka"
description = "Wayland popup subscriber for notred"
keywords = ["wayland", "notifications", "notred", "pango", "cairo", "mako"]
repository = "https://github.com/Gigas002/poshanka"
version = "0.1.0"
