[package]
name = "libposhanka"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wayland layer-shell notification daemon runtime."

[features]
default = []

[dependencies]
rustix = { version = "1", features = ["event"] }
tempfile = "3"
thiserror = "2"
tracing = "0.1"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
