[package]
name = "poshanka"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "poshanka"
path = "src/main.rs"

[features]
default = []

[dependencies]
clap = { version = "4", features = ["derive"] }
libposhanka = { path = "../libposhanka" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
