[package]
name = "poshankactl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Control client for the poshanka notification daemon."

[[bin]]
name = "poshankactl"
path = "src/main.rs"

[features]
default = ["dbus"]
dbus = ["dep:zbus"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", optional = true }
